--- a/package.json
+++ b/package.json
@@ -1,20 +1,65 @@
 {
-  "name": "forecast-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
-  }
+   "name": "forecast-app",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "@mantine/core": "4.2.5",
+      "@mantine/hooks": "4.2.5",
+      "@mantine/next": "4.2.5",
+      "next": "12.1.6",
+      "react": "18.1.0",
+      "react-dom": "18.1.0"
+   },
+   "devDependencies": {
+      "eslint": "^8.15.0",
+      "eslint-config-next": "12.1.6",
+      "eslint-config-standard": "^17.0.0",
+      "eslint-plugin-import": "^2.26.0",
+      "eslint-plugin-n": "^15.2.0",
+      "eslint-plugin-promise": "^6.0.0",
+      "eslint-plugin-react": "^7.30.0"
+   },
+   "eslintConfig": {
+      "env": {
+         "browser": true,
+         "es2021": true,
+         "node": true
+      },
+      "extends": [
+         "plugin:react/recommended",
+         "standard"
+      ],
+      "parserOptions": {
+         "ecmaFeatures": {
+            "jsx": true
+         },
+         "ecmaVersion": "latest",
+         "sourceType": "module"
+      },
+      "plugins": [
+         "react"
+      ],
+      "rules": {
+         "react/react-in-jsx-scope": "off",
+         "react/prop-types": "off",
+         "indent": "off",
+         "space-before-function-paren": "off",
+         "no-unused-vars": "warn",
+         "multiline-ternary": "off",
+         "react/no-children-prop": "off"
+      }
+   },
+   "prettier": {
+      "semi": false,
+      "singleQuote": true,
+      "trailingComma": "none",
+      "tabWidth": 3,
+      "arrowParens": "avoid"
+   }
 }
