--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
       "lint": "next lint"
    },
    "dependencies": {
-      "@mantine/core": "4.2.5",
-      "@mantine/hooks": "4.2.5",
-      "@mantine/next": "4.2.5",
-      "next": "12.1.6",
-      "react": "18.1.0",
-      "react-dom": "18.1.0"
+      "@mantine/core": "4.1.4",
+      "@mantine/hooks": "4.1.4",
+      "@mantine/next": "4.1.4",
+      "framer-motion": "6.3.3",
+      "next": "12.1.5",
+      "react": "18.0.0",
+      "react-dom": "18.0.0"
    },
    "devDependencies": {
-      "eslint": "^8.15.0",
-      "eslint-config-next": "12.1.6",
+      "eslint": "^8.14.0",
+      "eslint-config-next": "12.1.5",
       "eslint-config-standard": "^17.0.0",
       "eslint-plugin-import": "^2.26.0",
-      "eslint-plugin-n": "^15.2.0",
+      "eslint-plugin-n": "^15.1.0",
       "eslint-plugin-promise": "^6.0.0",
-      "eslint-plugin-react": "^7.30.0"
+      "eslint-plugin-react": "^7.29.4"
    },
    "eslintConfig": {
       "env": {
